--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,13 +1,19 @@
-FROM maven:amazoncorretto AS maven
-WORKDIR /app
-COPY /Ekart/src /app/src
-COPY /Ekart/pom.xml /app/pom.xml
+FROM bitnami/git:latest AS stage1
+WORKDIR /repo
+ARG REPO_URL=https://github.com/Veena-devops/Ekart.git
+RUN git clone $REPO_URL /repo
+CMD ["bash"]
+
+FROM maven:amazoncorretto AS stage2
+WORKDIR /build
+COPY --from=stage1 /repo/src /build/src
+COPY --from=stage1 /repo/pom.xml /build/pom.xml
 RUN mvn clean package -DskipTests=true
-CMD ["bash"] 
+CMD ["bash"]
 
 FROM openjdk:8u151-jdk-alpine3.7
 EXPOSE 8070
-ENV APP_HOME /usr/src/app
-COPY --from=maven /app/target/shopping-cart-0.0.1-SNAPSHOT.jar $APP_HOME/app.jar
-WORKDIR $APP_HOME
-ENTRYPOINT exec java -jar app.jar
+ENV app /usr/src/app
+COPY --from=stage2 /build/target/shopping-cart-0.0.1-SNAPSHOT.jar $app/app.jar
+WORKDIR $app
+ENTRYPOINT exec java -jar app.jar
