--- a/helm/templates/deploymentservice.yaml
+++ b/helm/templates/deploymentservice.yaml
@@ -14,17 +14,17 @@ spec:
     spec:
       containers:
         - name: ekart
-          image: adijaiswal/ekart:latest # Image that will be used to containers in the cluster
-          imagePullPolicy: IfNotPresent
+          image: 791714091301.dkr.ecr.ap-south-1.amazonaws.com/sept-2024
+          imagePullPolicy: Always
           ports:
             - containerPort: 8070 # The port that the container is running on in the cluster
 
 
 ---
 
-apiVersion: v1 # Kubernetes API version
-kind: Service # Kubernetes resource kind we are creating
-metadata: # Metadata of the resource kind we are creating
+apiVersion: v1 
+kind: Service 
+metadata: 
   name: ekart-ssvc 
 spec:
   selector:
@@ -32,5 +32,4 @@ spec:
   ports:
     - port: 8070 # The port that the service is running on in the cluster
       targetPort: 8070 # The port exposed by the service
-      nodePort: 31000
-  type: NodePort # type of the service.
+  type: ClusterIP # type of the service.
