--- a/helm/templates/ingress-rules.yaml
+++ b/helm/templates/ingress-rules.yaml
@@ -11,6 +11,6 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: hello
+            name: ekart-ssvc
             port: 
-              number: 80
+              number: 8070
