--- a/helm/templates/deploymentservice.yaml
+++ b/helm/templates/deploymentservice.yaml
@@ -15,6 +15,7 @@ spec:
       containers:
         - name: ekart
           image: 791714091301.dkr.ecr.ap-south-1.amazonaws.com/sept-2024
+          command: ["/bin/sh","-c","sleep infinity"]
           imagePullPolicy: Always
           ports:
             - containerPort: 8070 # The port that the container is running on in the cluster
