--- a/deploymentservice.yml
+++ b/deploymentservice.yml
@@ -1,3 +1,4 @@
+
 apiVersion: apps/v1
 kind: Deployment # Kubernetes resource kind we are creating
 metadata:
@@ -12,25 +13,28 @@ spec:
       labels:
         app: ekart
     spec:
+      serviceAccountName: veena
+      imagePullSecrets:
+        - name: ecr-key
       containers:
         - name: ekart
-          image: adijaiswal/ekart:latest # Image that will be used to containers in the cluster
-          imagePullPolicy: IfNotPresent
+          image: 791714091301.dkr.ecr.ap-south-1.amazonaws.com/sept-2024:Ekart-example
+          command: ["/bin/sh","-c","sleep infinity"]
+          imagePullPolicy: Always
           ports:
             - containerPort: 8070 # The port that the container is running on in the cluster
 
 
 ---
 
-apiVersion: v1 # Kubernetes API version
-kind: Service # Kubernetes resource kind we are creating
-metadata: # Metadata of the resource kind we are creating
-  name: ekart-ssvc
+apiVersion: v1 
+kind: Service 
+metadata: 
+  name: ekart-ssvc 
 spec:
   selector:
     app: ekart
   ports:
-    - protocol: "TCP"
-      port: 8070 # The port that the service is running on in the cluster
+    - port: 80 # The port that the service is running on in the cluster
       targetPort: 8070 # The port exposed by the service
-  type: LoadBalancer # type of the service.
+  type: ClusterIP # type of the service.
