--- a/deploymentservice.yaml
+++ b/deploymentservice.yaml
@@ -19,7 +19,7 @@ spec:
       containers:
         - name: ekart
           image: 791714091301.dkr.ecr.ap-south-1.amazonaws.com/sept-2024:Ekart-example
-          command: [""/bin/sh", "-c", "sleep 9999999""]
+          command: ["/bin/sh", "-c", "sleep 9999999"]
           imagePullPolicy: Always
           ports:
             - containerPort: 8070 # The port that the container is running on in the cluster
