--- a/ingress-rules.yaml
+++ b/ingress-rules.yaml
@@ -11,6 +11,6 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: ekart-ssvc
+            name: 
             port: 
               number: 80
