--- a/deploymentservice.yaml
+++ b/deploymentservice.yaml
@@ -38,4 +38,4 @@ spec:
     - port: 8070 # The port that the service is running on in the cluster
       targetPort: 8070 # The port exposed by the service
       nodePort: 31000
-  type: Nodeport # type of the service.
+  type: NodePort # type of the service.
