--- a/helm/templates/deploymentservice.yaml
+++ b/helm/templates/deploymentservice.yaml
@@ -17,8 +17,8 @@ spec:
         - name: ecr-key
       containers:
         - name: ekart
-          image: 791714091301.dkr.ecr.ap-south-1.amazonaws.com/sept-2024:Ekart-example
-          command: ["/bin/sh","-c","sleep infinity"]
+          image: adijaiswal/ekart:latest
+          #command: ["/bin/sh", "-c", "sleep 9999999"]
           imagePullPolicy: Always
           ports:
             - containerPort: 8070 # The port that the container is running on in the cluster
@@ -34,6 +34,7 @@ spec:
   selector:
     app: ekart
   ports:
-    - port: 80 # The port that the service is running on in the cluster
+    - port: 8070 # The port that the service is running on in the cluster
       targetPort: 8070 # The port exposed by the service
-  type: ClusterIP # type of the service.
+      nodePort: 31000
+  type: NodePort # type of the service.
